# CS5450-Networked-and-Distributed-Computing

Lab2/: gbn.c  gbn.h  receiver.c  sender.c
Lab3/: CMakeLists.txt  Makefile  main.cc  main.hh  moc_main.cpp  p2papp
Lab4/app/: build.gradle  google-services.json  proguard-rules.pro
Lab4/app/src/androidTest/java/cs5450/lab4/: ExampleInstrumentedTest.java  LoginTest.java  PrivatePublicPostTest.java
Lab4/app/src/main/: AndroidManifest.xml
Lab4/app/src/main/java/cs5450/lab4/: BaseActivity.java  ItemsFragment.java  LoginActivity.java  MainActivity.java  NewPostActivity.java  Post.java  PostViewHolder.java  PrivateFragment.java
Lab4/app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_new_post.xml  fragment_item.xml  fragment_item_list.xml  post_content_layout.xml
Lab4/app/src/main/res/menu/: menu_main.xml
Lab4/app/src/main/res/values/: strings.xml
Lab4/app/src/test/java/cs5450/lab4/: ExampleUnitTest.java
Lab4/gradle/wrapper/: gradle-wrapper.properties
